[gd_scene load_steps=2 format=3 uid="uid://bx2gsksg0vnv1"]

[ext_resource type="Script" uid="uid://c5wsxlawgxebf" path="res://NodeChat/welcome/tscn/market_item_mono.gd" id="1_h7dgh"]

[node name="MarketItemMono" type="PanelContainer"]
offset_right = 96.0
offset_bottom = 61.0
size_flags_horizontal = 3
size_flags_vertical = 0
script = ExtResource("1_h7dgh")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="set_name" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "插件名称"

[node name="author_name" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "插件作者"

[node name="Button" type="Button" parent="."]
layout_mode = 2
flat = true

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
